fixed horizonatal overflow on stay page

--- a/src/CSS_Modules/Stay/stay.module.css
+++ b/src/CSS_Modules/Stay/stay.module.css
@@ -122,6 +122,7 @@
   width: 100%;
   max-height: 800px;
   overflow-y: auto;
+  overflow-x: hidden;
   background-color: var(--primary-color-2);
 }
 
